--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
        3. Typographie : Alliance Playfair Display (élégance) et Inter (force).
        4. Démonstrations : Interface ultra-optimisée. Barre haute affinée (50px).
        5. Mode Immersion : Système de bascule plein écran avec bouton de sortie encadré et mis en évidence.
-       6. UX Enhancement : Pop-up d'accueil en mode démo pour conseiller le plein écran.
-       7. Catégories : Ajout des panneaux Shopping, Professionnels et Tourisme pour compléter l'offre.
+       6. Catégories : Refonte design des panneaux avec accentuation bleue et pastilles de statut circulaires.
   -->
   <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
@@ -89,18 +88,30 @@
 
     .nav-link:hover::after, .nav-link.active::after { width: 100%; }
 
-    /* Cartes Accueil */
+    /* Cartes Accueil & Catégories */
     .feature-card {
       background: white;
-      border: 1px solid rgba(0, 64, 71, 0.1);
+      border: 1px solid rgba(39, 130, 153, 0.1);
       transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
-      height: 100%;
+      position: relative;
     }
 
     .feature-card:hover {
       transform: translateY(-12px);
-      box-shadow: 0 30px 60px -15px rgba(0, 64, 71, 0.2);
+      box-shadow: 0 30px 60px -15px rgba(0, 64, 71, 0.15);
       border-color: var(--primary);
+    }
+
+    /* Pastille circulaire haut droite */
+    .status-circle {
+      position: absolute;
+      top: 24px;
+      right: 24px;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: var(--primary);
+      box-shadow: 0 0 10px var(--primary);
     }
 
     .cta-button {
@@ -271,7 +282,7 @@
         font-weight: bold;
     }
 
-    /* Pop-up d'accueil Démo */
+    /* Styles de la Pop-up d'accueil Démo */
     #demo-modal {
       display: none;
       position: fixed;
@@ -407,19 +418,22 @@
           <button class="border-2 border-[#004047] hover:bg-[#004047] hover:text-white text-[#004047] px-14 py-6 rounded-full font-black text-[10px] transition-all uppercase tracking-[0.3em]" onclick="navigateToPage('demo')">Démonstrations</button>
         </div>
         
-        <!-- Cards Home -->
+        <!-- Cards Home (vitesse, multi-support, etc.) -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-12 text-left max-w-7xl mx-auto px-4 mb-32">
             <div class="feature-card p-12 rounded-[2rem] border-t-8 border-[#278299]">
-              <div class="text-xs font-black text-[#278299] uppercase tracking-widest mb-6">Technologie 01</div>
+              <div class="status-circle"></div>
+              <div class="text-xs font-black text-[#278299] uppercase tracking-widest mb-6 text-left">Technologie 01</div>
               <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic text-left">Immersion 360°</h3>
               <p class="text-slate-600 text-sm leading-relaxed font-light text-left">Une précision chirurgicale pour restituer l'âme de vos lieux avec une fidélité absolue.</p>
             </div>
             <div class="feature-card p-12 rounded-[2rem] border-t-8 border-[#004047]">
+              <div class="status-circle"></div>
               <div class="text-xs font-black text-[#004047] uppercase tracking-widest mb-6 text-left">Usage 02</div>
               <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic text-left">Multi-supports</h3>
               <p class="text-slate-600 text-sm leading-relaxed font-light text-left">Une expérience optimisée pour mobile et desktop. Sans téléchargement.</p>
             </div>
             <div class="feature-card p-12 rounded-[2rem] border-t-8 border-[#315a97]">
+              <div class="status-circle"></div>
               <div class="text-xs font-black text-[#315a97] uppercase tracking-widest mb-6 text-left">Vision 03</div>
               <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic text-left">Conversion</h3>
               <p class="text-slate-600 text-sm leading-relaxed font-light text-left">Transformez la curiosité en acte d'achat grâce à nos outils interactifs intégrés.</p>
@@ -443,7 +457,7 @@
         </div>
       </div>
 
-      <!-- PAGE CATÉGORIES (EXPERTIISES COMPLETES) -->
+      <!-- PAGE CATÉGORIES (EXPERTIISES) -->
       <div id="page-categories" class="page px-8 py-24 max-w-7xl mx-auto">
         <div class="text-center mb-24">
             <span class="text-[#278299] font-black text-[11px] uppercase tracking-[0.6em] mb-4 block">Départements</span>
@@ -454,7 +468,8 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 text-left">
             <!-- Restaurant -->
             <div class="feature-card p-12 rounded-[2.5rem] flex flex-col group relative overflow-hidden">
-              <div class="absolute top-0 right-0 w-24 h-24 bg-[#278299]/5 rounded-bl-full"></div>
+              <div class="status-circle"></div>
+              <div class="absolute top-0 left-0 w-full h-1.5 bg-[#278299]"></div>
               <div class="text-4xl mb-10 text-left">🍽️</div>
               <h3 class="text-2xl font-bold text-slate-900 mb-4 font-serif uppercase tracking-widest italic text-left">Restaurants</h3>
               <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left">Invitez vos clients à votre table avant même qu'ils ne passent la porte. Une mise en bouche digitale.</p>
@@ -467,7 +482,8 @@
 
             <!-- Activités -->
             <div class="feature-card p-12 rounded-[2.5rem] flex flex-col group relative overflow-hidden">
-              <div class="absolute top-0 right-0 w-24 h-24 bg-[#315a97]/5 rounded-bl-full"></div>
+              <div class="status-circle"></div>
+              <div class="absolute top-0 left-0 w-full h-1.5 bg-[#315a97]"></div>
               <div class="text-4xl mb-10 text-left">🎯</div>
               <h3 class="text-2xl font-bold text-slate-900 mb-4 font-serif uppercase tracking-widest italic text-left">Activités</h3>
               <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left">Donnez le vertige. Capturez l'excitation de vos loisirs dans une expérience 360° immersive.</p>
@@ -480,7 +496,8 @@
 
             <!-- Hébergement -->
             <div class="feature-card p-12 rounded-[2.5rem] flex flex-col group relative overflow-hidden">
-              <div class="absolute top-0 right-0 w-24 h-24 bg-[#004047]/5 rounded-bl-full"></div>
+              <div class="status-circle"></div>
+              <div class="absolute top-0 left-0 w-full h-1.5 bg-[#004047]"></div>
               <div class="text-4xl mb-10 text-left">🏡</div>
               <h3 class="text-2xl font-bold text-slate-900 mb-4 font-serif uppercase tracking-widest italic text-left">Hébergements</h3>
               <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left">Le confort devient visible. Rassurez vos hôtes sur chaque détail de leur futur séjour.</p>
@@ -493,10 +510,11 @@
 
             <!-- Shopping -->
             <div class="feature-card p-12 rounded-[2.5rem] flex flex-col group relative overflow-hidden text-left">
-                <div class="absolute top-0 right-0 w-24 h-24 bg-[#278299]/5 rounded-bl-full"></div>
+                <div class="status-circle"></div>
+                <div class="absolute top-0 left-0 w-full h-1.5 bg-[#278299]"></div>
                 <div class="text-4xl mb-10 text-left">🛍️</div>
                 <h3 class="text-2xl font-bold text-slate-900 mb-4 font-serif uppercase tracking-widest italic text-left">Shopping</h3>
-                <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left">Transformez votre point de vente en une destination digitale interactive accessible 24h/24.</p>
+                <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left text-left">Transformez votre point de vente en une destination digitale interactive accessible 24h/24.</p>
                 <ul class="text-[10px] text-slate-400 space-y-4 mb-10 border-t border-slate-100 pt-8 font-black uppercase tracking-widest text-left">
                   <li class="flex items-center gap-4"><span class="w-2 h-2 bg-[#278299]"></span> Tags Produits</li>
                   <li class="flex items-center gap-4"><span class="w-2 h-2 bg-[#278299]"></span> SEO Local</li>
@@ -506,10 +524,11 @@
 
             <!-- Professionnels -->
             <div class="feature-card p-12 rounded-[2.5rem] flex flex-col group relative overflow-hidden text-left">
-                <div class="absolute top-0 right-0 w-24 h-24 bg-[#315a97]/5 rounded-bl-full"></div>
+                <div class="status-circle"></div>
+                <div class="absolute top-0 left-0 w-full h-1.5 bg-[#315a97]"></div>
                 <div class="text-4xl mb-10 text-left">💼</div>
                 <h3 class="text-2xl font-bold text-slate-900 mb-4 font-serif uppercase tracking-widest italic text-left">Professionnels</h3>
-                <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left">Valorisez vos bureaux et infrastructures industrielles pour vos clients et futurs collaborateurs.</p>
+                <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left text-left">Valorisez vos bureaux et infrastructures industrielles pour vos clients et collaborateurs.</p>
                 <ul class="text-[10px] text-slate-400 space-y-4 mb-10 border-t border-slate-100 pt-8 font-black uppercase tracking-widest text-left">
                   <li class="flex items-center gap-4"><span class="w-2 h-2 bg-[#315a97]"></span> Recrutement</li>
                   <li class="flex items-center gap-4"><span class="w-2 h-2 bg-[#315a97]"></span> Immobilier Pro</li>
@@ -519,13 +538,14 @@
 
             <!-- Tourisme -->
             <div class="feature-card p-12 rounded-[2.5rem] flex flex-col group relative overflow-hidden text-left">
-                <div class="absolute top-0 right-0 w-24 h-24 bg-[#004047]/5 rounded-bl-full"></div>
+                <div class="status-circle"></div>
+                <div class="absolute top-0 left-0 w-full h-1.5 bg-[#004047]"></div>
                 <div class="text-4xl mb-10 text-left">🏖️</div>
-                <h3 class="text-2xl font-bold text-slate-900 mb-4 font-serif uppercase tracking-widest italic text-left">Tourisme</h3>
-                <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left">Sublimez le patrimoine et la culture de votre territoire grâce au storytelling immersif.</p>
+                <h3 class="text-2xl font-bold text-slate-900 mb-4 font-serif uppercase tracking-widest italic text-left text-left">Tourisme</h3>
+                <p class="text-slate-600 text-sm mb-10 leading-relaxed font-light text-left text-left">Sublimez le patrimoine et la culture de votre territoire grâce au storytelling immersif.</p>
                 <ul class="text-[10px] text-slate-400 space-y-4 mb-10 border-t border-slate-100 pt-8 font-black uppercase tracking-widest text-left">
                   <li class="flex items-center gap-4"><span class="w-2 h-2 bg-[#004047]"></span> Territoires</li>
-                  <li class="flex items-center gap-4"><span class="w-2 h-2 bg-[#004047]"></span> Culture & Arts</li>
+                  <li class="flex items-center gap-4"><span class="w-2 h-2 bg-[#004047]"></span> Storytelling</li>
                 </ul>
                 <button class="cta-button py-5 rounded-2xl mt-auto font-black text-[10px] tracking-[0.3em]" onclick="window.open('https://nova360.app.codinsight.app/?category=tourisme', '_blank')">VISITER</button>
             </div>
@@ -533,12 +553,11 @@
       </div>
 
       <!-- PAGE DÉMONSTRATIONS -->
-      <div id="page-demo" class="page overflow-hidden">
+      <div id="page-demo" class="page overflow-hidden text-white">
         
-        <!-- Modal Fullscreen Advice -->
         <div id="demo-modal" onclick="closeDemoModal()">
           <div class="modal-content" onclick="event.stopPropagation()">
-            <div class="text-5xl mb-6">⛶</div>
+            <div class="text-5xl mb-6 text-[#278299]">⛶</div>
             <h2 class="text-3xl font-serif italic text-[#004047] mb-4 text-center">Optimisez votre vision</h2>
             <p class="text-slate-600 mb-8 leading-relaxed font-light text-center">
               Pour une immersion totale et une expérience sans frontières, nous vous conseillons d'utiliser le bouton <strong>Plein Écran</strong> situé en haut à droite.
@@ -597,12 +616,14 @@
                 </p>
                 <div class="grid grid-cols-2 gap-8 pt-12">
                     <div class="feature-card p-10 rounded-3xl text-center bg-white shadow-xl border-none">
+                        <div class="status-circle mx-auto relative top-0 right-0 mb-4"></div>
                         <div class="text-4xl font-black text-[#278299] mb-4 font-serif text-center">360°</div>
-                        <div class="text-[10px] uppercase font-bold text-slate-400 tracking-[0.4em] text-center">Présence</div>
+                        <div class="text-[10px] uppercase font-bold text-slate-400 tracking-[0.4em] text-center text-center">Présence</div>
                     </div>
                     <div class="feature-card p-10 rounded-3xl text-center bg-white shadow-xl border-none text-center">
-                        <div class="text-4xl font-black text-[#004047] mb-4 font-serif text-center">MÉDIA</div>
-                        <div class="text-[10px] uppercase font-bold text-slate-400 tracking-[0.4em] text-center">Dynamique</div>
+                        <div class="status-circle mx-auto relative top-0 right-0 mb-4"></div>
+                        <div class="text-4xl font-black text-[#004047] mb-4 font-serif text-center text-center">MÉDIA</div>
+                        <div class="text-[10px] uppercase font-bold text-slate-400 tracking-[0.4em] text-center text-center text-center">Dynamique</div>
                     </div>
                 </div>
             </div>
@@ -633,16 +654,16 @@
             <form id="contact-form" class="grid grid-cols-1 md:grid-cols-2 gap-12 text-left">
               <div class="space-y-10 text-left">
                 <div class="group text-left">
-                  <label class="block text-[10px] font-black uppercase text-slate-400 mb-4 tracking-[0.4em] group-focus-within:text-[#278299] transition-colors text-left">Votre Nom</label>
+                  <label class="block text-[10px] font-black uppercase text-slate-400 mb-4 tracking-[0.4em] group-focus-within:text-[#278299] transition-colors text-left text-left">Votre Nom</label>
                   <input type="text" placeholder="JEAN DUPONT" required class="w-full px-0 py-4 bg-transparent border-b-2 border-slate-100 text-slate-900 outline-none focus:border-[#278299] transition-all text-sm uppercase tracking-widest font-bold">
                 </div>
                 <div class="group text-left">
-                  <label class="block text-[10px] font-black uppercase text-slate-400 mb-4 tracking-[0.4em] group-focus-within:text-[#278299] transition-colors text-left">Votre Email</label>
+                  <label class="block text-[10px] font-black uppercase text-slate-400 mb-4 tracking-[0.4em] group-focus-within:text-[#278299] transition-colors text-left text-left text-left">Votre Email</label>
                   <input type="email" placeholder="CONTACT@ENTREPRISE.FR" required class="w-full px-0 py-4 bg-transparent border-b-2 border-slate-100 text-slate-900 outline-none focus:border-[#278299] transition-all text-sm uppercase tracking-widest font-bold text-left">
                 </div>
               </div>
               <div class="flex flex-col group text-left">
-                <label class="block text-[10px] font-black uppercase text-slate-400 mb-4 tracking-[0.4em] group-focus-within:text-[#278299] transition-colors text-left">Votre Vision</label>
+                <label class="block text-[10px] font-black uppercase text-slate-400 mb-4 tracking-[0.4em] group-focus-within:text-[#278299] transition-colors text-left text-left">Votre Vision</label>
                 <textarea rows="5" placeholder="DÉCRIVEZ VOTRE PROJET..." required class="flex-grow w-full px-8 py-6 bg-slate-50 border border-slate-100 rounded-[2rem] text-slate-900 outline-none focus:border-[#278299] focus:bg-white transition-all text-sm uppercase tracking-widest font-bold text-left"></textarea>
               </div>
               <div class="md:col-span-2 pt-10 text-center">
@@ -657,7 +678,7 @@
                 </div>
                 <div class="p-10 bg-white rounded-[3.5rem] shadow-2xl border border-slate-50 relative group">
                     <div class="absolute inset-0 bg-[#278299]/5 rounded-[3.5rem] scale-0 group-hover:scale-100 transition-transform duration-500"></div>
-                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://nova360.app.codinsight.app/&color=004047" alt="QR Code" class="h-28 w-28 opacity-90 relative z-10 text-white">
+                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://nova360.app.codinsight.app/&color=004047" alt="QR Code" class="h-28 w-28 opacity-90 relative z-10 text-white text-white">
                 </div>
             </div>
         </div>
