--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </button>
           </div>
           
-          <!-- Key Features -->
+          <!-- Key Features (TOUS UNIFIÉS EN #00565e) -->
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left max-w-7xl mx-auto">
             <div class="feature-card p-10 rounded-3xl border-t-4 border-[#00565e]">
               <div class="status-half-circle"></div>
@@ -317,7 +317,7 @@
           </div>
 
           <!-- Section Partenaires -->
-          <div class="mt-40">
+          <div class="mt-40 w-full">
             <h3 class="text-2xl font-serif italic text-[#00565e] mb-12">Ils nous font confiance</h3>
             <div class="overflow-hidden relative py-10">
               <div class="logo-slider gap-12 items-center">
@@ -331,6 +331,22 @@
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/ycP1NWTk/logo-partenaire-2.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/KYPqm04/logo-partenaire-3.png" alt="Partenaire" class="max-h-20"></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- NOUVELLE SECTION QR CODE (PAGE ACCUEIL) -->
+          <div class="mt-40 w-full max-w-4xl mx-auto">
+            <div class="bg-white/40 p-12 md:p-16 rounded-[3rem] shadow-xl border-2 border-[#00565e]/10 flex flex-col md:flex-row items-center justify-center gap-12 text-center md:text-left transition-all hover:bg-white/60">
+              <div class="flex-1 space-y-4">
+                <h4 class="text-2xl font-black text-[#00565e] uppercase tracking-tighter">Nova360 <span class="font-serif italic font-light text-[#278299]">Nomade</span></h4>
+                <p class="text-sm text-slate-600 font-medium leading-relaxed uppercase tracking-widest">
+                  Démarrer l'expérience de Nova 360 en flashant ce code, aucune application n'est nécessaire à installer.
+                </p>
+              </div>
+              <div class="p-6 bg-white rounded-3xl shadow-2xl border border-[#00565e]/5 group relative overflow-hidden">
+                <div class="absolute inset-0 bg-[#00565e]/5 opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://nova360.app.codinsight.app/&color=00565e" alt="QR Code Nova360" class="h-32 w-32 relative z-10">
               </div>
             </div>
           </div>
