--- a/index.html
+++ b/index.html
@@ -474,7 +474,6 @@
           <button onclick="toggleImmersion(true)" class="w-10 h-10 flex items-center justify-center bg-white/10 rounded-lg text-white hover:bg-[#00565e] transition-colors ml-4 flex-shrink-0">⛶</button>
         </div>
 
-        <!-- Conteneur de la visite virtuelle -->
         <div class="demo-content-wrapper">
           <button onclick="toggleImmersion(false)" class="exit-immersion">⛶</button>
           <iframe id="demo-frame" src="about:blank" class="w-full h-full border-none" allowfullscreen></iframe>
@@ -485,9 +484,10 @@
       <section id="page-about" class="page px-6 py-24 max-w-6xl mx-auto">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-20 items-center">
           <div class="space-y-8 text-left">
-            <span class="text-[#00565e] font-black text-[11px] uppercase tracking-widest block">Notre Manifeste</span>
-            <h2 class="text-4xl md:text-6xl font-light text-slate-800 leading-tight">L'Intelligence <br><span class="font-serif italic text-[#00565e]">de l'Image.</span></h2>
-            <p class="text-lg text-slate-500 font-light border-l-4 border-[#00565e] pl-8 py-2">Nova360 redéfinit la présence digitale en plaçant l'immersion au cœur de votre stratégie.</p>
+            <h2 class="text-4xl md:text-6xl font-light text-slate-800 leading-tight">L'excellence <br><span class="font-serif italic text-[#00565e]">de la visibilité.</span></h2>
+            <p class="text-lg text-slate-500 font-light border-l-4 border-[#00565e] pl-8 py-2">
+              Nova 360 redéfinit la visibilité grâce à l'innovation de notre visite virtuelle 360° interactive en rendant l'expérience utilisateur exceptionnelle.
+            </p>
             <div class="grid grid-cols-2 gap-6 pt-10">
               <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-t-4 border-[#00565e]">
                 <div class="text-3xl font-serif italic text-[#00565e] mb-2">360°</div>
