--- a/index.html
+++ b/index.html
@@ -333,7 +333,6 @@
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/ycP1NWTk/logo-partenaire-2.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/KYPqm04/logo-partenaire-3.png" alt="Partenaire" class="max-h-20"></div>
-                <!-- Doublon pour le loop infini -->
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/qLjcv2Qr/logo-partenaire-5.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/VYgr7xvs/logo-partenaire-4.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire" class="max-h-20"></div>
@@ -487,22 +486,20 @@
               Nova 360 redéfinit la visibilité grâce à l'innovation de notre visite virtuelle 360° interactive en rendant l'expérience utilisateur exceptionnelle.
             </p>
             <div class="grid grid-cols-2 gap-6 pt-10">
-              <!-- Cartes avec liseré bleu au survol (#315a97) -->
-              <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-t-4 border-[#00565e] hover:border-[#315a97]">
+              <!-- Cartes avec liseré complet bleu (#315a97) au survol -->
+              <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-2 border-transparent border-t-4 border-t-[#00565e] hover:border-[#315a97] transition-all duration-300">
                 <div class="text-3xl font-serif italic text-[#00565e] mb-2">360°</div>
                 <div class="text-[9px] uppercase font-bold text-slate-400 tracking-widest">Vision Totale</div>
               </div>
-              <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-t-4 border-[#00565e] hover:border-[#315a97]">
+              <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-2 border-transparent border-t-4 border-t-[#00565e] hover:border-[#315a97] transition-all duration-300">
                 <div class="text-3xl font-serif italic text-[#00565e] mb-2">PRO</div>
                 <div class="text-[9px] uppercase font-bold text-slate-400 tracking-widest">Haute Fidélité</div>
               </div>
             </div>
           </div>
-          <!-- Gros panneau couleur #315a97 -->
           <div class="bg-[#315a97] p-12 rounded-[3rem] shadow-2xl text-white text-left">
             <h3 class="font-black text-[11px] uppercase tracking-widest opacity-40 mb-10 text-center">Nos Valeurs Fondatrices</h3>
             <div class="space-y-6">
-              <!-- Nouvelle couleur pour les blocs Humain et Simplicité (Gris Perle Subtil) -->
               <div class="p-8 bg-[#D4D3DC]/10 border border-white/10 rounded-3xl">
                 <div class="text-2xl font-serif italic mb-2 text-white">Humain</div>
                 <p class="text-sm text-white/60 font-light">Une technologie invisible pour une expérience organique.</p>
