--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <!-- 
        Architecture de Marque : Nova360 - Architectural Lab
        Palette harmonisée : 
-       - Deep Petrol (#00565e) : Structure et navigation
+       - Deep Petrol (#00565e) : Structure, navigation et panneau Vision principal
        - Accent Soft Teal (#278299) : Unification du titre (début et fin) et boutons
-       - Deep Blue Accent (#315a97) : Style du bouton de sortie d'immersion et panneau Vision
+       - Deep Blue Accent (#315a97) : Style du bouton de sortie d'immersion et survol cartes
        - Surface (#D4D3DC) : Gris Perle
   -->
   <meta charset="UTF-8">
@@ -20,7 +20,7 @@
       --primary: #00565e;    /* Deep Petrol */
       --accent: #2BA7C2;     /* Accent Azure */
       --hover-grad: #278299; /* Couleur de dégradé au survol et accent principal titre */
-      --secondary: #315a97;  /* Bleu profond secondaire - utilisé pour l'encadré de sortie et panneau vision */
+      --secondary: #315a97;  /* Bleu profond secondaire - utilisé pour l'encadré de sortie et survol vision */
       --dark: #00565e;       
       --bg-custom: #D4D3DC;  
       --text-main: #1F2937;  
@@ -333,6 +333,7 @@
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/ycP1NWTk/logo-partenaire-2.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/KYPqm04/logo-partenaire-3.png" alt="Partenaire" class="max-h-20"></div>
+                <!-- Doublon pour le loop infini -->
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/qLjcv2Qr/logo-partenaire-5.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/VYgr7xvs/logo-partenaire-4.png" alt="Partenaire" class="max-h-20"></div>
                 <div class="bg-white p-4 rounded-xl shadow-md w-32 h-32 flex items-center justify-center"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire" class="max-h-20"></div>
@@ -486,19 +487,21 @@
               Nova 360 redéfinit la visibilité grâce à l'innovation de notre visite virtuelle 360° interactive en rendant l'expérience utilisateur exceptionnelle.
             </p>
             <div class="grid grid-cols-2 gap-6 pt-10">
-              <!-- Cartes avec liseré complet bleu (#315a97) au survol -->
-              <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-2 border-transparent border-t-4 border-t-[#00565e] hover:border-[#315a97] transition-all duration-300">
-                <div class="text-3xl font-serif italic text-[#00565e] mb-2">360°</div>
+              <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-2 border-transparent border-t-4 border-t-[#00565e] hover:border-[#315a97] transition-all duration-300 group">
+                <div class="text-3xl font-serif italic text-[#00565e] mb-2 group-hover:text-[#315a97] transition-colors">360°</div>
                 <div class="text-[9px] uppercase font-bold text-slate-400 tracking-widest">Vision Totale</div>
               </div>
-              <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-2 border-transparent border-t-4 border-t-[#00565e] hover:border-[#315a97] transition-all duration-300">
-                <div class="text-3xl font-serif italic text-[#00565e] mb-2">PRO</div>
+              <div class="feature-card p-8 rounded-3xl text-center shadow-lg border-2 border-transparent border-t-4 border-t-[#00565e] hover:border-[#315a97] transition-all duration-300 group">
+                <div class="text-3xl font-serif italic text-[#00565e] mb-2 group-hover:text-[#315a97] transition-colors">PRO</div>
                 <div class="text-[9px] uppercase font-bold text-slate-400 tracking-widest">Haute Fidélité</div>
               </div>
             </div>
           </div>
-          <div class="bg-[#315a97] p-12 rounded-[3rem] shadow-2xl text-white text-left">
-            <h3 class="font-black text-[11px] uppercase tracking-widest opacity-40 mb-10 text-center">Nos Valeurs Fondatrices</h3>
+          
+          <div class="bg-[#00565e] p-12 rounded-[3rem] shadow-2xl text-white text-left">
+            <!-- TITRE PLUS EN ÉVIDENCE -->
+            <h3 class="font-serif italic text-3xl md:text-4xl mb-12 text-center relative pb-6 border-b border-white/10">Nos Valeurs Fondatrices</h3>
+            
             <div class="space-y-6">
               <div class="p-8 bg-[#D4D3DC]/10 border border-white/10 rounded-3xl">
                 <div class="text-2xl font-serif italic mb-2 text-white">Humain</div>
