--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- 
        Architecture de Marque : Nova360 - Architectural Lab
        Palette harmonisée : 
-       - Deep Petrol (#00565e) : Structure, navigation, panneau Vision et Slider logos
+       - Deep Petrol (#00565e) : Structure, navigation, panneau Vision, Slider logos et Footer
        - Accent Soft Teal (#278299) : Unification du titre (début et fin) et boutons
        - Deep Blue Accent (#315a97) : Style du bouton de sortie d'immersion et survol cartes
        - Surface (#D4D3DC) : Gris Perle
@@ -626,15 +626,16 @@
       </section>
     </main>
 
-    <footer id="main-footer" class="py-12 bg-[#0a0a0a] border-t border-white/5">
-      <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-[9px] uppercase tracking-widest text-white/30">
+    <!-- FOOTER HARMONISÉ -->
+    <footer id="main-footer" class="py-12 bg-[#00565e] border-t border-white/10 shadow-[0_-10px_30px_-10px_rgba(0,86,94,0.4)]">
+      <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-[9px] uppercase tracking-widest text-white/50">
         <div class="flex items-center gap-6 mb-6 md:mb-0">
-          <img src="https://i.ibb.co/x8m2DyP9/Logo-Nova-360-V2-0.png" alt="Nova" class="h-6 opacity-30 brightness-0 invert">
-          <span>&copy; 2025 Nova360 Architectural Lab.</span>
+          <img src="https://i.ibb.co/x8m2DyP9/Logo-Nova-360-V2-0.png" alt="Nova" class="h-6 opacity-50 brightness-0 invert">
+          <span class="text-white">&copy; 2025 Nova360 Architectural Lab.</span>
         </div>
         <div class="flex gap-10">
-          <a href="#" class="hover:text-white transition-colors">Mentions Légales</a>
-          <a href="#" class="hover:text-white transition-colors">Confidentialité</a>
+          <a href="#" class="text-white hover:text-white/80 transition-colors">Mentions Légales</a>
+          <a href="#" class="text-white hover:text-white/80 transition-colors">Confidentialité</a>
         </div>
       </div>
     </footer>
